Version 7.4
===========
Bug Fixes
* The dockbar's parent for dock containers was set incorrectly. The wrong 
   dockbar could be destroyed when a dock container was destroyed.   
* Corrected variable initialisation in CMenuMetrics   
	 
New Features and Enhancements
* TRACE now accepts both ANSI and Unicode strings.
* CFile functions are now virtual
* Frames now uses IDW_READY for the "Ready" string


Changes in detail
-----------------
- Added CTab::SetFont
- Modified CFile::OpenFileDialog   		Added Title argument	
- Modified CFile::SaveFileDialog		Added Title argument
- Modified CString  operator == 		now accepts const
- Modified CString  operator != 		now accepts const
- Modified CString  operator [] 		now accepts const
- Modified  CWnd::DeferWindowPos		now uses CWnd* for second argument


Version 7.3
===========

New Features and Enhancements
-----------------------------
* Adjusted the frame's appearance
	- Updated the visual appearance of popup menus on systems using Windows Aero. On 
	  systems with Aero, popup menus are rendered with Windows Visual Styles. Systems
	  without Aero continue to use the Win32++ theme for popup menus.
	- Frames now honour the current window theme's menu and status fonts.
	- the frame's appearance changes dynamically to reflect changes to the window theme.
	- minor adjustment to the rebar theme colours for the "Modern" theme.
	
* Extended CWebBrowser
	The CWebBrower class has been extended to wrap the member functions of
	iWebBrowser2. The Browser sample has been updated and now supports
	Copy/Paste.

* Added the following controls
   - CDateTime
   - CHeader
   - CHotKey
   - CIPAddress
   - CMonthCalendar
   - CTooltip
   
* CString constructors now accept either ANSI or Unicode characters and converts
   these to TCHAR as required.
   
* Extended CDC
	The CDC::DetachBitmap function has been added. This provides a convenient
	way of detaching a bitmap from a memory DC created by CreateCompatibleBitmap.